ADA correction: improve visited links contrast

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -696,11 +696,9 @@ button.close {
 }
 
 #uh-copyright a:link,
-#uh-copyright a:hover {
-    color: #000;
-}
+#uh-copyright a:hover,
 #uh-copyright a:visited {
-    color: #777;
+    color: #000;
 }
 
 .uh-mdc-card {
